@@ -18,3 +18,4 @@ LINEZM_6|POINT(9.5 0.5 0.5 2)
 line_locate_point|0.528602749909894
 line_locate_point|1
 line_locate_point|0
+line_substring|SRID=4326;LINESTRING(2 2 0 0,3 3 0 0,3.2 3.2 0 0)
