@@ -7,6 +7,7 @@ PostGIS 1.1.1CVS
 	- BUGFIX in line_locate_point()
 	- Fixed handling of postgresql paths
 	- Fixed a premature exit in postgis_restore.pl 
+	- Fixed memory bug in line_substring()
 
 PostGIS 1.1.0
 2005/12/21
